Fix build error: Editor folder in Build

--- a/Editor/Pospec.Helper.Editor.asmdef
+++ b/Editor/Pospec.Helper.Editor.asmdef
@@ -4,7 +4,9 @@
     "references": [
         "Pospec.Helper"
     ],
-    "includePlatforms": [],
+    "includePlatforms": [
+        "Editor"
+    ],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
