Post game jam fixes

--- a/Runtime/Pospec.Helper.asmdef
+++ b/Runtime/Pospec.Helper.asmdef
@@ -1,3 +1,14 @@
 {
-	"name": "Pospec.Helper"
+    "name": "Pospec.Helper",
+    "rootNamespace": "Pospec.Helper",
+    "references": [],
+    "includePlatforms": [],
+    "excludePlatforms": [],
+    "allowUnsafeCode": false,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": true,
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
